--- a/infrastructure/docker/services/php/frontend/etc/nginx/nginx.conf
+++ b/infrastructure/docker/services/php/frontend/etc/nginx/nginx.conf
@@ -1,5 +1,5 @@
 user      nginx;
-pid       /var/run/nginx.pid;
+pid       /tmp/nginx.pid;
 daemon    off;
 error_log /proc/self/fd/2;
 include /etc/nginx/modules-enabled/*.conf;
@@ -24,6 +24,12 @@ http {
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+
+    client_body_temp_path /tmp/nginx-client_body_temp_path;
+    fastcgi_temp_path /tmp/nginx-fastcgi_temp_path;
+    proxy_temp_path /tmp/nginx-proxy_temp_path;
+    scgi_temp_path /tmp/nginx-scgi_temp_path;
+    uwsgi_temp_path /tmp/nginx-uwsgi_temp_path;
 
     server {
         listen 0.0.0.0:80;
