fix(pie): use a static version to allow bumping and make sure everyone has the same

--- a/infrastructure/docker/services/php/Dockerfile
+++ b/infrastructure/docker/services/php/Dockerfile
@@ -120,7 +120,7 @@ RUN phpenmod app-default \
 COPY --from=composer/composer:2.8.9 /usr/bin/composer /usr/bin/composer
 
 # Pie
-RUN curl -L --output /usr/local/bin/pie https://github.com/php/pie/releases/latest/download/pie.phar \
+RUN curl -L --output /usr/local/bin/pie https://github.com/php/pie/releases/download/1.0.0/pie.phar \
     && chmod +x /usr/local/bin/pie
 
 # Autocompletion
